--- a/content/book/1/1.3.md
+++ b/content/book/1/1.3.md
@@ -213,11 +213,11 @@ F
 
 Возникает резонный вопрос: зачем при программировании на языке высокого уровня и работе с переменными знать их форматы представления в памяти. При программировании на Си/Си++ для этого имеются определенные основания:
 
-· для понимания сущности преобразовании целого со знаком в беззнаковое (и наоборот) требуется иметь представление об их форматах;
+- для понимания сущности преобразовании целого со знаком в беззнаковое (и наоборот) требуется иметь представление об их форматах;
 
-· при управлении памятью на низком (физическом) уровне возможен доступ к «составным частям» формата представляемых данных, а также переход от одного типа данных к другому при сохранении содержимого памяти;
+- при управлении памятью на низком (физическом) уровне возможен доступ к «составным частям» формата представляемых данных, а также переход от одного типа данных к другому при сохранении содержимого памяти;
 
-· при отладке программ, работающих с двоичными файлами, требуется просматривать двоичные файлы на физическом уровне, при этом форматы представляемых данных в нем идентичны внутренним.
+- при отладке программ, работающих с двоичными файлами, требуется просматривать двоичные файлы на физическом уровне, при этом форматы представляемых данных в нем идентичны внутренним.
 
 Максимально, что при этом может потребоваться, - это умение «видеть» граничные значения формата (0,1,-1, максимально возможное и т.п.), а также переводить эти значения в ограниченном диапазоне в «естественный» вид.
 
@@ -392,40 +392,33 @@ FFFFFFFF -1
 
 &nbsp;<Icon name="YinAndYang"/>Некоторые аналогии для пары тип данных - переменная можно найти, как ни странно, в философии объективного идеализма (Платон, Гегель). Согласно ей существует мир идеальный - совершенных идей и мир материальный - несовершенных предметов. Кроме того, есть косная материя, проецируясь (отражаясь) в которую, идея порождает предмет. В качестве «косной материи» выступает в данном случае память, лишенная соответствующей интерпретации. Тип данных играет роль «идеи» переменных определенного вида, отображение которой на эту память порождает переменную.
 
-Базовые типы данных целых чисел
+## Базовые типы данных целых чисел
 
 В Си имеется возможность использовать машинные слова различной размерности для определения целых переменных как в знаковой, так и в беззнаковой форме. Для этого используются следующие служебные слова:
 
--char - размерность переменной - байт;
+- **char** - размерность переменной - байт;
 
--int - размерность переменной - стандартное машинное слово;
+- **int** - размерность переменной - стандартное машинное слово;
 
--short - укороченная размерность, меньшая либо равная int;
+- **short** - укороченная размерность, меньшая либо равная int;
 
--long - размерность переменной - двойное слово;
+- **long** - размерность переменной - двойное слово;
 
--signed - форма представления целого со знаком;
+- **signed** - форма представления целого со знаком;
 
--unsigned - беззнаковая форма представления целого.
+- **unsigned** - беззнаковая форма представления целого.
 
 Из этих служебных слов можно составить определение типа данных целой переменной. При этом **signed** считается заданным по умолчанию,
 а **unsigned int** сокращается до **int**:
 
-int i; // целое со знаком, слово
-
-char c; // целое со знаком, байт
-
-unsigned char uc; // целое без знака, байт
-
-unsigned u; // целое без знака, слово
-
-long l; // целое со знаком, двойное слово
-
-unsigned long ul; // целое без знака, двойное слово
-
-short s; // целое со знаком, короткое слово
-
-                                                // (слово или байт)
+int i; // целое со знаком, слово <br/>
+char c; // целое со знаком, байт <br/>
+unsigned char uc; // целое без знака, байт <br/>
+unsigned u; // целое без знака, слово <br/>
+long l; // целое со знаком, двойное слово <br/>
+unsigned long ul; // целое без знака, двойное слово <br/>
+short s; // целое со знаком, короткое слово <br/>
+         // (слово или байт) <br/>
 
 Для определения размерности различных переменных и типов в Си имеется специальная операция, которая возвращает размерность типа данных, переменной и значения выражения, подсчитанную в байтах:
 
