--- a/content/book/1/1.4.md
+++ b/content/book/1/1.4.md
@@ -6,13 +6,13 @@ metaDescription: 'This is the meta description for this page'
 
 Следующий слой выразительных средств языка – средства обработки данных. Это – набор элементарных действий (операций) и их сочетаний (выражений), который позволяет изменять значения переменных. К ним относятся:
 
-· традиционные операции над переменными (например, арифметические, логические, поразрядные);
+- традиционные операции над переменными (например, арифметические, логические, поразрядные);
 
-· присваивание;
+- присваивание;
 
-· ввод-вывод;
+- ввод-вывод;
 
-· вызов процедур и функций.
+- вызов процедур и функций.
 
 Перечисленные средства объединены по назначению в программе. Синтаксически они могут относиться к различным уровням. Например, в большинстве языков программирования присваивание является оператором, т.е. элементом более высокого синтаксического уровня, чем выражения. Аналогичным образом иногда обстоят дела с вызовом функций и вводом-выводом. В Си в этом смысле повезло. Всё перечисленное является операциями и объединено в один уровень – выражений. (Вызов функций в выражениях, а также библиотека функций ввода-вывода будут рассмотрены в 1.6).
 
@@ -20,27 +20,27 @@ metaDescription: 'This is the meta description for this page'
 
 Для начала – немного терминологии:
 
-· операция – элементарное действие по обработке данных (по работе с переменными);
+- операция – элементарное действие по обработке данных (по работе с переменными);
 
-· операнд - переменная, константа, выражение, участвующие в операции;
+- операнд - переменная, константа, выражение, участвующие в операции;
 
-· унарная операция - операция с одним операндом;
+- унарная операция - операция с одним операндом;
 
-· бинарная операция - операция с двумя операндами;
+- бинарная операция - операция с двумя операндами;
 
-· выражение – элемент синтаксиса с описанием последовательности выполнения операций и их операндов, в котором результат одной операции является операндом другой.
+- выражение – элемент синтаксиса с описанием последовательности выполнения операций и их операндов, в котором результат одной операции является операндом другой.
 
 Если посмотреть полный перечень операций в Си, то первое, что бросается в глаза, это их многочисленность. Второе (уже упомянутое), что к операциям относятся такие действия, которые в других языках программирования считаются операторами (например, присваивание). И третье, что все они имеют очень «компактный» синтаксис, т.е. при пропуске или добавлении лишнего символа одна операция превращается в другую. Все это требует внимательного и осознанного отношения к операциям в Си. Перечислим их особенности:
 
-· операции разбиты на 16 групп по приоритетам их выполнения;
+- операции разбиты на 16 групп по приоритетам их выполнения;
 
-· внутри каждой группы задается направление выполнения операции для последовательности операций одного приоритета. Для большинства из них имеет место естественное направление слева направо. Однако для операций присваивания, условной операции и унарных операций, у которых знак (символ) операции находится перед операндом (слева), направление операций противоположное - справа налево;
+- внутри каждой группы задается направление выполнения операции для последовательности операций одного приоритета. Для большинства из них имеет место естественное направление слева направо. Однако для операций присваивания, условной операции и унарных операций, у которых знак (символ) операции находится перед операндом (слева), направление операций противоположное - справа налево;
 
-· большинство операций совместимо по результатам. Это значит, что результат любой операции может быть операндом любой другой операции, то есть их можно комбинировать между собой как угодно, даже в самых «диких» сочетаниях;
+- большинство операций совместимо по результатам. Это значит, что результат любой операции может быть операндом любой другой операции, то есть их можно комбинировать между собой как угодно, даже в самых «диких» сочетаниях;
 
-· в Си отсутствует понятие логического (булевого) типа «истина-ложь». Для его представления используются значения целой переменной: 0 –«ложь», 1 (или любое отличное от нуля значение) – «истина»;
+- в Си отсутствует понятие логического (булевого) типа «истина-ложь». Для его представления используются значения целой переменной: 0 –«ложь», 1 (или любое отличное от нуля значение) – «истина»;
 
-· в некоторых операциях возможно изменение значений участвующих в ней операндов;
+- в некоторых операциях возможно изменение значений участвующих в ней операндов;
 
 Действие и результат
 
@@ -72,19 +72,19 @@ c = A[i++]; // Эквивалентно c = A[i]; i = i + 1;
 
 В выражениях в качестве операндов могут присутствовать переменные и константы разных типов (здесь и далее мы ограничимся пока только известными нам базовыми типами данных). Результат каждой операции также имеет свой определенный тип, который зависит от типов операндов. Если в бинарных операциях типы данных обоих операндов совпадают, то результат будет иметь тот же самый тип. Если нет, то транслятор должен включить в код программы неявные операции, которые преобразуют тип операндов, то есть выполнить приведение типов. Но прежде, чем изучать подробности таких преобразований, ответим на вопрос: «Где они могут происходить»?:
 
-· при выполнении операции присваивания, когда значение переменной или выражения из правой части запоминается в переменной в левой части;
+- при выполнении операции присваивания, когда значение переменной или выражения из правой части запоминается в переменной в левой части;
 
-· при прямом указании на необходимость изменения типа данных переменной или выражения, для чего используется операция явного преобразования типа;
+- при прямом указании на необходимость изменения типа данных переменной или выражения, для чего используется операция явного преобразования типа;
 
-· при выполнении бинарных операций над операндами различных типов, когда более «длинный» операнд превалирует над более «коротким», вещественное - над целым, а беззнаковое над знаковым.
+- при выполнении бинарных операций над операндами различных типов, когда более «длинный» операнд превалирует над более «коротким», вещественное - над целым, а беззнаковое над знаковым.
 
 Преобразование типов может неявно включать в себя следующие действия:
 
-· преобразование целой переменной в переменную вещественную (с плавающей точкой) и наоборот;
+- преобразование целой переменной в переменную вещественную (с плавающей точкой) и наоборот;
 
-· увеличение или уменьшение разрядности машинного слова, то есть «усечение» или «растягивание» целой переменной;
+- увеличение или уменьшение разрядности машинного слова, то есть «усечение» или «растягивание» целой переменной;
 
-· преобразование знаковой формы представления целого в беззнаковую и наоборот.
+- преобразование знаковой формы представления целого в беззнаковую и наоборот.
 
 Возможные ошибки, возникающие при таких преобразованиях, никоим образом не фиксируются ни аппаратными средствами, ни исполнительной системой языка, т.е. остаются незамеченными. Поэтому здесь нужно быть особенно внимательным и при необходимости учитывать особенности представления данных во внутренней форме (см. 1.3).
 
@@ -96,9 +96,9 @@ char c; c = n; // Потеря значащих цифр (0x15)
 
 Увеличение разрядности приводит к появлению дополнительных старших разрядов числа. При этом способ их заполнения зависит от формы представления целого:
 
-· для беззнаковых целых заполнение производится нулями;
+- для беззнаковых целых заполнение производится нулями;
 
-· для целых со знаком они заполняются значением знакового (старшего) разряда.
+- для целых со знаком они заполняются значением знакового (старшего) разряда.
 
 Таким образом, при увеличении размерности целого его значение сохраняется (с учетом формы представления):
 
@@ -110,29 +110,26 @@ unsigned char uc=0x84; u = uc; // Значение u=0x00000084
 
 При преобразовании вещественного к целому происходит потеря дробной части, при этом возможны случаи возникновения ошибок переполнения и потери значащих цифр, когда полученное целое имеет слишком большое значение:
 
-double d1=855.666, d2=0.5E16;
-
-int n; n = d1; // Отбрасывание дробной части
-
-            n = d2;                                      // Потеря значимости
+double d1=855.666, d2=0.5E16; <br/>
+int n; n = d1; // Отбрасывание дробной части <br/>
+       n = d2; // Потеря значимости <br/>
 
 Преобразование знаковой формы к беззнаковой не сопровождается изменением значения целого числа и вообще не приводит к выполнению каких-либо действий в программе. В таких случаях транслятор «запоминает», что форма представления целого изменилась:
 
-int n=-1; unsigned d;
-
-d = n; // Значение d=0xFFFFFFFF (-1)
+int n=-1; unsigned d; <br/>
+d = n; // Значение d=0xFFFFFFFF (-1) <br/>
 
 При выполнении бинарных операций принят следующий порядок:
 
-· короткие типы char, short и битовые поля удлиняются до int, float до double;
+- короткие типы char, short и битовые поля удлиняются до int, float до double;
 
-· если один из операндов – длинный вещественный (long double), то второй также приводится к этому типу;
+- если один из операндов – длинный вещественный (long double), то второй также приводится к этому типу;
 
-· если один из операндов – длинное целое (long), то второй также приводится к этому типу;
+- если один из операндов – длинное целое (long), то второй также приводится к этому типу;
 
-· если один из операндов – беззнаковый (unsigned), то второй также приводится к этому типу;
+- если один из операндов – беззнаковый (unsigned), то второй также приводится к этому типу;
 
-· в конце концов остаются целые операнды, сохраняющие свой тип.
+- в конце концов остаются целые операнды, сохраняющие свой тип.
 
 Таким образом, короткие типы данных (знаковые и беззнаковые) удлиняются до int и double, а выполнение любой бинарной операции с одним long double, double, long, unsigned ведет к преобразованию другого операнда к тому же типу. Это может сопровождаться перечисленными выше действиями: увеличение разрядности операнда путем его «удлинения», преобразование в форму с плавающей точкой и изменение беззнаковой формы представления на знаковую и наоборот.
 
@@ -150,25 +147,20 @@ int i; i = 0xFFFFFFFF;
 
 Целая переменная со знаком получает значение FFFFFFFF, что соответствует -1 для знаковой формы в дополнительном коде. Изменение формы представления с беззнаковой на знаковую не сопровождается никакими действиями.
 
-            short i = 0xFFFF;
-
-            int l; l = i;
+short i = 0xFFFF;
+int l; l = i;
 
 Преобразование short в int сопровождается «удлинением» переменной, что с учетом представления i со знаком дает FFFFFFFF, то есть целое со значением -1.
 
-            unsigned short n = 0xFF00;
-
-            int l;     l = n;
+unsigned short n = 0xFF00;
+int l;     l = n;
 
 Переменная n «удлиняется» как целое без знака, то есть переменная l получит значение 0000FF00.
 
 int i; unsigned u;
-
-            i = u = 0xFFFFFFFF;
-
-            if (i > 5) ...                     //  «Ложь»
-
-            if (u > 5) ...                    //  «Истина»
+i = u = 0xFFFFFFFF;
+if (i > 5) ... //  «Ложь»
+if (u > 5) ... //  «Истина»
 
 Значения переменных без знака и со знаком равны FFFFFFFF или -1. Но результаты сравнения противоположны, так как во втором случае сравнение проводится для беззнаковых целых по их абсолютной величине, а в первом случае - путем проверки знака результата вычитания, то есть с учетом знаковой формы представления чисел.
 
@@ -178,27 +170,27 @@ int a=5, b=2; double dd; dd=a/b; // результат dd=2.0, деление in
 
 Здесь производится целочисленное деление, несмотря на запоминание результата в вещественной форме.
 
-Классификация операций
+## Классификация операций
 
 Классификацию операций будем проводить не по приоритетам (как это делается в справочниках), а по их назначению. Именно такими группами они будут встречаться нам в различных областях программирования:
 
-· арифметические ( +,-,\*,/,% ) (см. 4.2);
+- арифметические ( +,-,\*,/,% ) (см. 4.2);
 
-· логические ( &&, ||, ! );
+- логические ( &&, ||, ! );
 
-· сравнения ( <,>,>=,<=,==,!=);
+- сравнения ( <,>,>=,<=,==,!=);
 
-· поразрядные (машинно-ориентированные) ( &,|,^,~,<<,>> ) (см. 9.1);
+- поразрядные (машинно-ориентированные) ( &,|,^,~,<<,>> ) (см. 9.1);
 
-· присваиваниe (=,++,--,+=,-=,\*-,/= и т.п.);
+- присваиваниe (=,++,--,+=,-=,\*-,/= и т.п.);
 
-· работa с указателями и памятью (\*,&,sizeof) (см. 5.2, 9.2);
+- работa с указателями и памятью (\*,&,sizeof) (см. 5.2, 9.2);
 
-· выделение составляющего типа данных ( (),\*,[], . , -> ) (см. 5.4) ;
+- выделение составляющего типа данных ( (),\*,[], . , -> ) (см. 5.4) ;
 
-· явноe преобразованиe типа ( (тип) );
+- явноe преобразованиe типа ( (тип) );
 
-· последовательность ( ","-запятая), условная ( ?: ).
+- последовательность ( ","-запятая), условная ( ?: ).
 
 Арифметические операции
 
@@ -244,11 +236,11 @@ while(!k) {...} // эквивалентно while(k==0) {...}
 
 К операциям присваивания относятся все операции, которые меняют значение одного из операндов. В Си их целых три группы:
 
-· обычное присваивание (=);
+- обычное присваивание (=);
 
-· присваивание, соединенное с одной их бинарных операций (+=, -=, \*=, /=, %=, <<=, >>=, &=, |=, ^=);
+- присваивание, соединенное с одной их бинарных операций (+=, -=, \*=, /=, %=, <<=, >>=, &=, |=, ^=);
 
-· операции инкремента и декремента (увеличения и уменьшения на 1).
+- операции инкремента и декремента (увеличения и уменьшения на 1).
 
 Операция присваивания "=" сохраняет значение выражения, стоящего в левой части, в переменной, а точнее, в адресном выражении, стоящем а правой части. Термин адресное выражение (или l-value) используется для обозначения тех выражений, которым соответствуют исходные объекты (переменные) в памяти программы. На данном уровне знакомства со структурами данных – это простые переменные и элементы массивов.
 
@@ -312,13 +304,13 @@ for (i=0; i<n; i++) {…A[i]…} // Обычный цикл
 
 for (i=0 , j=n-1; i<j; i++ , j--) // Цикл с двумя индексами
 
-                          {...A[i]...A[j]...}
+{...A[i]...A[j]...}
 
 Результатом операции является значение последнего выражения. Поэтому если в группе выражений, соединенных запятыми, есть условие, которое надлежит проверить, то оно должно быть последним. При этом тип результата также равен типу последнего выражения. Например, в заголовке цикла в начале каждого шага проверяется условие, перед которым выполняется присваивание:
 
 while( a=b, a < 0) {....}
 
-Подводные камни и маленькие хитрости
+## Подводные камни и маленькие хитрости
 
 Компактный синтаксис операций, а также их совместимость по результатам служат источником значительного количества ошибок такого плана: при пропуске или, наоборот, дублировании знака операции может получиться другая операция, которая при принятой в Си «свободе нравов» будет синтаксически корректна, выполнима, но даст совершенно незапланированный результат. «Сообразительный» транслятор может сопроводить такую ошибку предупреждением (warning). Приведем примеры таких ошибок:
 
@@ -330,29 +322,29 @@ if (a && 0x10) // вместо if (a & 0x10)
 
 Трудно обнаруживаемые ошибки возникают при неявных преобразованиях типов в операциях, особенно при сочетании знаковой и беззнаковой форм представления:
 
+```c
 char c[80];
-
 #define CODE 193
-
 if (c[i] == CODE) // Эквивалентно (int)c[i] == 193
+```
 
 В данном примере идентификатором CODE обозначена целая константа, которая имеет смысл кода символа, на наличие которого затем проверяются элементы массива символов. Но дело в том, что такая операция будет давать значение «ложь» всегда. Тип char представляет символы как знаковые байты (целые минимальной длины), поэтому этому коду в данной форме представления соответствует отрицательное значение -63. Так как любая операция преобразует операнды char к int, то получится интересное сочетание "-63 == 193", имеющее значение «ложь» вместо планируемого «истина». В таких случаях, когда разрядности переменных меняются, лучше не смешивать знаковую и беззнаковую формы. В данном случае исправить ошибку можно несколькими способами
 
+```c
 #define CODE -63 // Непонятно
-
 #define CODE (char)193 // Приемлемо
-
 #define CODE '\301'
-
 unsigned char c[80]; // Лучше всего для символов с кодами >128
+```
+
 
 При выполнении операций с переменными различной разрядности нужно помнить, что последовательность преобразования разрядностей (типов) связана с последовательностью и приоритетами выполнения операций. Поэтому само по себе наличие в выражении операнда большей разрядности еще не гарантирует правильности вычислений для больших значений. Это видно на примере, где используется переменная типа long для хранения произведения переменных типа int. Ошибка состоит в том, что операция умножения все равно будет производиться с целыми размерности int, что может привести к потере значащих цифр произведения:
 
+```c
 Int a,b; long c;
-
 c = a \* b; // Неправильно
-
 c = (long)a \* b; // Правильно
+```
 
 Операция присваивания, операция «запятая» и условная операция позволяют выполнять многие действия «на лету», не выходя за пределы синтaксиса выражения в условиях, проверяемых в оперaторах if, while, например:
 
@@ -370,38 +362,32 @@ for (...; d>0 ? a>b : b>=a; ...) {...}
 
 При наличии в программе нескольких вариантов выбора по группе условий программа становится «сильно ветвистой», например:
 
+```c
 if (a<b)
-
-if (a<c)
-
-                        if (b<c)   {...}      // a < b && a < c && b < c
-
-                        else      {...}      // a < b && a < c && b >=c
-
-            else
-
-                        if (b<c)   {...}      // a < b && a >=c && b < c
-
-                        else      {...}      // a < b && a >=c && b >=c
-
+       if (a<c)
+              if (b<c) {...} // a < b && a < c && b < c
+              else     {...} // a < b && a < c && b >=c
+       else
+              if (b<c)  {...} // a < b && a >=c && b < c
+              else      {...} // a < b && a >=c && b >=c
 else ...
+```
 
 Можно воспользоваться тем, что операция сравнения дает целый результат (1 или 0) и сформировать переменную, принимающую уникальное значение для каждой комбинации сравнений. Тогда программа примет хотя и менее понятный, но зато более регулярный вид:
 
+```c
 int n; n = (a < b)*4 + (a < c)*2 + (b < c);
+switch(n) {
+       case 0:... break; // a >=b && a >=c && b >=c
+       case 7:... break; // a < b && a < c && b < c
+}
+```
 
-switch(n){
-
-case 0:... break; // a >=b && a >=c && b >=c
-
-case 7: ... break; // a < b && a < c && b < c
-
-            }
-
-Роль символа «точка с запятой»
+## Роль символа «точка с запятой»
 
 Символ ";" (точка с запятой), поставленный в конце выражения, превращает его в конструкцию более высокого уровня - оператор. Для обозначения его роли лучше всего подходит слово «ограничитель» - он ограничивает текущую синтаксическую конструкцию. То же самое он делает в других местах программы, например, в определениях переменных. Поэтому транслятор, обнаружив начало выражения или определения, продолжает его обработку, пока не встретит ";". Если программист забыл ограничить конструкцию этим символом, то транслятор «не заметит» окончания выражения и по инерции будет продолжать анализ последующей части программы как часть последнего. Это может привести к появлению ошибок трансляции, которых на самом деле нет в программе.
 
+```c
 a = b + c - 5 // Здесь пропущен символ ";"
 
 if (a < b) {} // Здесь транслятор обнаружит ошибку
@@ -415,14 +401,16 @@ else {} // В этой части программы транслятор мож
                                     // обнаружить «наведенную» ошибку
 
                                     // Эту часть программы транслятор пропустит
+```
 
 Конечно, здесь много зависит от особенностей транслятора, но чтобы не проверять его на «сообразительность», лучше приучить себя вовремя ставить этот ограничитель.
 
 Примечание: в Паскале символ «;» называется разделителем - он разделяет два оператора в простой последовательности. Эта тонкость в терминологии приводит к тому, что программы на Паскале и Си с точки зрения расстановки этого символа существенно различаются.
 
-Вопросы без ответов
+## Вопросы без ответов
 Определить значения переменных после выполнения действий.
 
+```c
 //---------------------------------------------------
 
 //------------------------------------------------- 1
@@ -476,3 +464,4 @@ m = (a \* b) > 0;
 //------------------------------------------------ 11
 
 m = a > 0 ? a : -a;
+```
