--- a/content/book/1/1.5.md
+++ b/content/book/1/1.5.md
@@ -6,29 +6,29 @@ metaDescription: 'This is the meta description for this page'
 
 Следующий «слой» конструкций языка программирования – операторы. Они создают то, что в обыденном сознании ассоциируется с понятием алгоритм – описание последовательности действий, выполняемых программой, или логика ее работы. Это, в свою очередь, ассоциируется с понятием «блок-схема», что, в целом, довольно близко к истине. На этом уровне языки программирования проявляют завидное единообразие, поскольку количество видов управляющей логики программы ограничено. В Си/Си++ реализован общий для большинства языков программирования «джентльменский набор» управляющих конструкций:
 
-· линейная последовательность действий;
+- линейная последовательность действий;
 
-· условная конструкция (если-то-иначе);
+- условная конструкция (если-то-иначе);
 
-· конструкция повторения (цикл);
+- конструкция повторения (цикл);
 
-· переход (и его разновидности).
+- переход (и его разновидности).
 
 Сразу же отметим, что этот набор является функционально избыточным, и для записи любого алгоритма достаточно только три вида.
 
 Описание управляющих конструкций языка (операторов) удобнее всего делать с помощью блок-схем. Хотя на самом деле блок-схема тоже представляет собой средство описания логики алгоритма, так что мы вроде как меняем «шило на мыло». Но все-таки для такого представления есть два основания:
 
-· элементы блок-схемы соответствуют основным компонентам системы команд компьютера с размещением программы в линейной памяти (см.1.2) – командам обработки данных, проверки условий и безусловных (условных) переходов;
+- элементы блок-схемы соответствуют основным компонентам системы команд компьютера с размещением программы в линейной памяти (см.1.2) – командам обработки данных, проверки условий и безусловных (условных) переходов;
 
-· блок-схемы являются естественным инструментом технологии «исторического» программирования, базирующейся на развертке процесса выполнения проектируемой программы во времени (см.3.2).
+- блок-схемы являются естественным инструментом технологии «исторического» программирования, базирующейся на развертке процесса выполнения проектируемой программы во времени (см.3.2).
 
 Блок-схема содержит элементы трех видов:
 
-· действие, связанное с обработкой данных, в том числе последовательность операций (выражение), присваивание и ввод-вывод. Изображается прямоугольником, имеющим один вход и один выход;
+- действие, связанное с обработкой данных, в том числе последовательность операций (выражение), присваивание и ввод-вывод. Изображается прямоугольником, имеющим один вход и один выход;
 
-· проверка условия. Изображается ромбом, в котором записано условие, и который имеет один вход и два выхода в зависимости от результата (0 – ложь, 1 –истина);
+- проверка условия. Изображается ромбом, в котором записано условие, и который имеет один вход и два выхода в зависимости от результата (0 – ложь, 1 –истина);
 
-· переход явно связывает последовательно выполняемые действия (связь по управлению, поток команд) и обозначается стрелкой.
+- переход явно связывает последовательно выполняемые действия (связь по управлению, поток команд) и обозначается стрелкой.
 
 Принцип вложенности и структурированные блок-схемы
 Управляющие конструкции языка являются структурированными, если эквивалентная им блок-схема имеет один вход и один выход. Тогда ее можно представить как элементарное действие в конструкции более высокого уровня. Возникает «матрешка», в которой логическая и синтаксическая вложенность операторов идентичны друг другу: каждый оператор «не выходит за рамки», т.е. не передает управления вне той синтаксической конструкции, в которую он вписан. Блок-схема, состоящая из таких структурированных конструкций, также является структурированной. В структурированной блок-схеме элемент-прямоугольник «действие» может содержать как элементарное действие (выражение, простой оператор), так и вложенную управляющую конструкцию.
@@ -93,11 +93,11 @@ while (условие) { оператор выражение 2; }
 
 Цикл for включает в себя четыре обязательные компоненты каждого цикла:
 
-· выражение_1 однократно вычисляется перед началом цикла и устанавливает его начальное состояние;
+- выражение_1 однократно вычисляется перед началом цикла и устанавливает его начальное состояние;
 
-· условие является условием продолжения цикла. Оно проверяется перед каждым шагом цикла, и при его истинности цикл повторяется. В соответствии с соглашениями, принятыми в Си, в качестве условия может выступать любое выражение со значением 0 – «ложь», не 0 – «истина»;
+- условие является условием продолжения цикла. Оно проверяется перед каждым шагом цикла, и при его истинности цикл повторяется. В соответствии с соглашениями, принятыми в Си, в качестве условия может выступать любое выражение со значением 0 – «ложь», не 0 – «истина»;
 
-· на каждом шаге цикла выполняется оператор (тело цикла) и выражение_2, оба они являются повторяющейся частью цикла. Выражение включает в себя необходимые действия для перехода к следующему шагу.
+- на каждом шаге цикла выполняется оператор (тело цикла) и выражение_2, оба они являются повторяющейся частью цикла. Выражение включает в себя необходимые действия для перехода к следующему шагу.
 
 Цикл for не накладывает никаких ограничений на вид выражений в его заголовке (отсутствует понятие «переменная цикла», все значения, изменяемые в цикле, сохраняются после выхода, количество и способы изменения переменных могут быть различными). Самый распространенный вариант, в котором переменная пробегает ряд последовательных значений от 0 до n-1 включительно, выглядит так:
 
@@ -116,13 +116,13 @@ mmm: оператор
 
 Оператор goto дает программисту большую свободу связывать между собой различные части программы. Как осознанно пользоваться этой свободой и не злоупотреблять ей, обсуждается в 3.3. Операторы break, continue, return, throw являются вариантами оператора перехода, действующими в рамках текущего цикла и функции. Поэтому они в меньшей мере нарушают естественную логику работы программы, заданную другими операторами:
 
-· оператор continue выполняет переход из тела цикла к его повторяющейся части, то есть досрочно завершает текущий шаг и переходит к следующему;
+- оператор continue выполняет переход из тела цикла к его повторяющейся части, то есть досрочно завершает текущий шаг и переходит к следующему;
 
-· оператор break производит альтернативный выход из самого внутреннего цикла, то есть переходит к первому оператору, следующему за текущим оператором цикла. Заметим, что «покинуть» одновременно несколько вложенных друг в друга циклов при помощи break не удается;
+- оператор break производит альтернативный выход из самого внутреннего цикла, то есть переходит к первому оператору, следующему за текущим оператором цикла. Заметим, что «покинуть» одновременно несколько вложенных друг в друга циклов при помощи break не удается;
 
-· оператор return производит досрочный выход из текущей функции. Он, кроме всего прочего, возвращает значение результата функции (см. 1.6);
+- оператор return производит досрочный выход из текущей функции. Он, кроме всего прочего, возвращает значение результата функции (см. 1.6);
 
-· оператор генерации исключения throw используется в Си++ как средство обработки ошибок, выполняя, в том числе, и действия, эквивалентные оператору return (см. 12.2)
+- оператор генерации исключения throw используется в Си++ как средство обработки ошибок, выполняя, в том числе, и действия, эквивалентные оператору return (см. 12.2)
 
 void F() { // Не совсем синтаксически корректная
 
@@ -222,44 +222,44 @@ break; }
 
 Архитектурно-ориентированная
 
-· действие
+- действие
 
-· условие
+- условие
 
-· переход
+- переход
 
 «Историческое» программирование, программирование на уровне архитектуры (системы команд) - Ассемблер
 
 Структурированная
 
-· последовательность
+- последовательность
 
-· выбор (ветвление)
+- выбор (ветвление)
 
-· повторение (цикл)
+- повторение (цикл)
 
 Технология структурного программирования
 
 Рекурсивная
 
-· последовательность
+- последовательность
 
-· выбор (ветвление)
+- выбор (ветвление)
 
-· рекурсия
+- рекурсия
 
 Функциональное программирование (ПРОЛОГ), представление синтаксиса в формальных грамматиках (трансляторы), частично-рекурсивные функции (теория алгоритмов)
 
 Подводные камни
 Особенность синтаксиса Си состоит в том, что последовательности управляющих конструкций, отличающиеся буквально на один символ, могут быть синтаксически правильными, но давать различные последовательности выполнения действий в программе. Это касается, прежде всего, тела цикла, где обнаруживается максимальное количество ошибок программирования (но то же самое можно отнести и к составным частям условного оператора). Итак, тело цикла может иметь четыре различных варианта реализации:
 
-· пустой оператор – символ «; - точка с запятой»;
+- пустой оператор – символ «; - точка с запятой»;
 
-· простой (первичный) оператор – выражение, ограниченное символом «;»;
+- простой (первичный) оператор – выражение, ограниченное символом «;»;
 
-· единственный оператор, имеющий произвольную внутреннюю структуру своего тела – условный, цикл, переключатель;
+- единственный оператор, имеющий произвольную внутреннюю структуру своего тела – условный, цикл, переключатель;
 
-· составной оператор – блок, содержащий последовательность операторов, объединенную скобками «{}».
+- составной оператор – блок, содержащий последовательность операторов, объединенную скобками «{}».
 
 Отсюда следует, что символ «точка с запятой» нельзя расставлять «для надежности», он может выступить в качестве пустого оператора, отрезав заголовок цикла от его настоящего тела. Аналогично, при усложнении тела цикла в процессе модификации программы (вместо одного оператора – последовательность из нескольких) не нужно забывать объединять получающиеся последовательности в блоки. Иначе к телу цикла будет отнесен только первый из них.
 
