--- a/content/book/1/1.8.md
+++ b/content/book/1/1.8.md
@@ -52,15 +52,15 @@ metaDescription: 'This is the meta description for this page'
 
 Шаг 4. Вызов стандартных функций ввода-вывода. Подробное описание форматированного ввода-вывода приводится в 4.5. Здесь же прокомментируем только то, что встречается в программе:
 
-· функции scanf и printf используются для ввода значений целых переменных;
+- функции scanf и printf используются для ввода значений целых переменных;
 
-· первым параметром функций является форматная строка вида "… %d…%d…";
+- первым параметром функций является форматная строка вида "… %d…%d…";
 
-· для printf форматная строка представляет собой произвольный текст, в который на место %d подставляется значение очередной переменной из списка, следующего за форматной строкой. В нашем примере в каждом printf выводится только по одной переменной;
+- для printf форматная строка представляет собой произвольный текст, в который на место %d подставляется значение очередной переменной из списка, следующего за форматной строкой. В нашем примере в каждом printf выводится только по одной переменной;
 
-· сочетание символов «\n» в форматной строке обозначает переход на следующую строку при выводе;
+- сочетание символов «\n» в форматной строке обозначает переход на следующую строку при выводе;
 
-· в функции ввода в форматной строке символы %d обозначают, что очередное значение вводится в десятичной системе счисления в очередную переменную типа int из списка, перед именем переменной обязателен символ «&».
+- в функции ввода в форматной строке символы %d обозначают, что очередное значение вводится в десятичной системе счисления в очередную переменную типа int из списка, перед именем переменной обязателен символ «&».
 
 Шаг 5. Операторы. В данном примере почти операторы являются структурированными, т.е. построены по принципу «один вход — один выход». Их объединение производится либо в виде последовательного расположения в тексте (и выполнения), либо в виде вложенности одного в другой, единственным исключением является return, и то он имеет отношение к процессу вызова функции:
 
@@ -102,9 +102,9 @@ metaDescription: 'This is the meta description for this page'
 
 Шаг 7. Содержательный смысл программы. Функция FF представляет содержательную часть программы, а main — интерфейсную. Все, что связано с содержательным анализом программы, рассматривается в главе 2. Более того, в 2.5 приводится пример анализа подобного фрагмента. Поэтому здесь мы приведем только результат выполнения функции и смысловую интерпретацию некоторых ее элементов: она находит максимальную последовательность подряд идущих одинаковых элементов и возвращает индекс первого из них.
 
-· основной цикл функции FF просматривает массив, последовательно сравнивая пары элементов (индекс текущего элемента i). Если они равны, то увеличивается счетчик k, а если нет, то он сбрасывается. Таким образом, счетчик отслеживает длину цепочки совпадающих пар (точнее, количество таких пар);
+- основной цикл функции FF просматривает массив, последовательно сравнивая пары элементов (индекс текущего элемента i). Если они равны, то увеличивается счетчик k, а если нет, то он сбрасывается. Таким образом, счетчик отслеживает длину цепочки совпадающих пар (точнее, количество таких пар);
 
-· перед сбрасыванием счетчика производится сравнение на предмет превышения максимальной длины s. Если длина новой последовательности больше, то запоминается она, а также индекс ее начала b. После окончания цикла это действие еще раз повторяется для учета последней накопленной последовательности.
+- перед сбрасыванием счетчика производится сравнение на предмет превышения максимальной длины s. Если длина новой последовательности больше, то запоминается она, а также индекс ее начала b. После окончания цикла это действие еще раз повторяется для учета последней накопленной последовательности.
 
 Основная функция main поддерживает диалог в режиме консольного приложения. Функция форматного вывода printf используется для вывода «подсказок» при вводе и оформления в удобочитаемом виде выводимых данных:
 
