--- a/content/book/2/2.2.md
+++ b/content/book/2/2.2.md
@@ -10,11 +10,11 @@ metaDescription: '2.2. «Исторический» и логический ан
 
 Убедиться, что теорема верна, можно различными способами. (Обратите внимание - убедиться, но не доказать). Точно так же можно убедиться, что программа дает тот или иной результат:
 
-·        выполнить программу в компьютере или проследить ее выполнение на конкретных входных данных «на бумаге» (анализ методом единичных проб или «исторический» анализ);
+-        выполнить программу в компьютере или проследить ее выполнение на конкретных входных данных «на бумаге» (анализ методом единичных проб или «исторический» анализ);
 
-·        разбить программу на фрагменты с известным «смыслом» и попробовать логически соединить результаты их выполнения в единое целое (логический, полуформальный анализ). Обычно на таком уровне в математике и выполняется доказательство теорем: шаги доказательства – это аксиомы или уже доказанные теоремы;
+-        разбить программу на фрагменты с известным «смыслом» и попробовать логически соединить результаты их выполнения в единое целое (логический, полуформальный анализ). Обычно на таком уровне в математике и выполняется доказательство теорем: шаги доказательства – это аксиомы или уже доказанные теоремы;
 
-·        формально доказать с использованием логических и математических методов (например, метода математической индукции), что фрагмент дает заданный результат для любых значений входных переменных (формальный анализ).
+-        формально доказать с использованием логических и математических методов (например, метода математической индукции), что фрагмент дает заданный результат для любых значений входных переменных (формальный анализ).
 
 Те же самые методы можно использовать, если результат и «смысл» программы не известен. Тогда при помощи единичных проб и разбиения программы на фрагменты с уже известным «смыслом»  можно догадаться, каков будет результат. Такой же процесс, но в обратном направлении  имеет место при разработке программы. Можно попытаться разбить конечный результат на ряд промежуточных, для которых уже имеются известные фрагменты.
 
@@ -162,9 +162,9 @@ s после if
 
 В «историческом» анализе большое значение имеют неформальная составляющая. Он требует очень развитой интуиции, чтобы уловить зависимость, которая присутствует в обрабатываемых данных и определяет результат. Реально же интуитивное видение результата программы является следствием опыта программирования и тоже является результатом тренировки. Кроме того, многообразие входных данных, с которыми может работать программа, не гарантирует того, что вы сразу заметите закономерность. Перечислим случаи, когда используется «исторический» анализ:
 
-·        для сравнительно простых программ, которые невозможно проанализировать логически путем разложения на составные части. В этом случае «исторический» анализ позволяет высказать догадки и предположения о результате работы программы, которые потом доказываются или опровергаются методами логического анализа;
+-        для сравнительно простых программ, которые невозможно проанализировать логически путем разложения на составные части. В этом случае «исторический» анализ позволяет высказать догадки и предположения о результате работы программы, которые потом доказываются или опровергаются методами логического анализа;
 
-·        если логический анализ позволяет разложить программу на составные части с известным результатом, а сформулировать логически результат их совместной работы не удается, то «исторический» анализ можно производить на высоком уровне, рассматривая результаты последовательного исполнения этих частей;
+-        если логический анализ позволяет разложить программу на составные части с известным результатом, а сформулировать логически результат их совместной работы не удается, то «исторический» анализ можно производить на высоком уровне, рассматривая результаты последовательного исполнения этих частей;
 
 Несмотря на кажущуюся ограниченность «исторического» анализа, можно привести веский довод в его защиту: он является источником новых знаний о программе: если хотя бы предположительно неизвестен «смысл» программы, то получить его формальными методами соединения ее составных частей нельзя (см.3.8).
 
