--- a/content/book/3/3.2.md
+++ b/content/book/3/3.2.md
@@ -7,21 +7,21 @@ metaDescription: '3.2 «Историческое» проектирование'
 Естественный подход к проектированию
 Первое, что приходит в голову – записывать последовательность действий в проектируемом алгоритме в том порядке, в котором они будут выполняться в программе. Для этого удобнее всего использовать графическое представление алгоритма – блок-схему. Блок-схема базируется на трех элементарных конструкциях:
 
-·        действия, связанные с обработкой данных, в том числе последовательность операций (выражение), присваивание и ввод-вывод записываются в прямоугольнике:
+-        действия, связанные с обработкой данных, в том числе последовательность операций (выражение), присваивание и ввод-вывод записываются в прямоугольнике:
 
  a=b+c 
 
  
 
 
-·        проверка условия изображается ромбом, в котором записано условие, и который имеет один вход и два выхода в зависимости от результата (0 – ложь, 1 –истина):
+-        проверка условия изображается ромбом, в котором записано условие, и который имеет один вход и два выхода в зависимости от результата (0 – ложь, 1 –истина):
 
  
 
  
 
 
-·        переход, обозначение последовательности выполнения перечисленных действий (связь по управлению, поток команд), обозначаемый стрелкой:
+-        переход, обозначение последовательности выполнения перечисленных действий (связь по управлению, поток команд), обозначаемый стрелкой:
 
  
 
@@ -34,11 +34,11 @@ metaDescription: '3.2 «Историческое» проектирование'
 
 Исторические корни «исторического» программирования. Несмотря на свою архаичность, блок-схема имеет свои преимущества (наглядность), а также исторические корни в компьютерной архитектуре. Память программы является линейной, поэтому при «вытягивании в линию» изображенной на плоскости блок-схемы соответствующий программный код должен содержать команды перехода. Самый простой набор инструкций процессора содержит три группы команд:
 
-·        команды обработки данных;
+-        команды обработки данных;
 
-·        проверки условий;
+-        проверки условий;
 
-·        безусловного и условных переходов.
+-        безусловного и условных переходов.
 
 Поэтому программный код во внутреннем представлении (и на языке Ассемблера) ближе к языку блок-схем, нежели к структурированным конструкциям языков высокого уровня. Между прочим, одна из основных функций фазы генерации кода в трансляторе заключается в распределении линейно адресуемой памяти для структурированных операторов типа if-then-else или do-while.
 
@@ -48,9 +48,9 @@ metaDescription: '3.2 «Историческое» проектирование'
 
 «Историческому» принципу проектирования также наиболее соответствует блок-схема алгоритма. К этому есть несколько причин:
 
-·        «рисование» блок-схемы идет в виде волны: разработчик каждый раз решает в контексте текущего состояния, что же делать дальше, при наличии условий процесс проектирования становится параллельным: каждую ветку можно вести независимо от другой;
+-        «рисование» блок-схемы идет в виде волны: разработчик каждый раз решает в контексте текущего состояния, что же делать дальше, при наличии условий процесс проектирования становится параллельным: каждую ветку можно вести независимо от другой;
 
-·        циклы возникают естественным образом, при возникновении ощущения, что следующая последовательность действий уже встречалось в программе («де жа вю»), следует сделать переход к этой части программы (обратная связь цикла). При этом необходимо проверить и другие составляющие возникающего цикла: условия завершения (или продолжения), переход к следующему шагу. Возможно, что придется переделать уже «нарисованный» фрагмент – он был спроектирован без учета возникшего цикла.
+-        циклы возникают естественным образом, при возникновении ощущения, что следующая последовательность действий уже встречалось в программе («де жа вю»), следует сделать переход к этой части программы (обратная связь цикла). При этом необходимо проверить и другие составляющие возникающего цикла: условия завершения (или продолжения), переход к следующему шагу. Возможно, что придется переделать уже «нарисованный» фрагмент – он был спроектирован без учета возникшего цикла.
 
 История в картинках. 1978 год. Появление тонких ростков структурного программирования в буйных зарослях Ассемблера и Фортрана. Я взялся за свой первый серьезный программный проект – транслятор. Как учили. Взял в общежитии у старшекурсников рулон миллиметровки, расстелил его на столе и стал рисовать блок-схему транслятора. Когда полез на вторую половину стола, начал путаться, куда же вести очередную стрелку. Когда дошел до второго метра блок-схемы, запутался окончательно.
 
@@ -59,15 +59,15 @@ metaDescription: '3.2 «Историческое» проектирование'
 
 Исходные и вспомогательные данные. Поскольку алгоритм достаточно прост, все используемые им данные можно перечислить сразу (в более сложных случаях данные определяются и осмысливаются по мере проработки алгоритма):
 
-·        массив накапливаемых простых чисел размерности N – A[N];
+-        массив накапливаемых простых чисел размерности N – A[N];
 
-·        диапазон проверяемых значений v;
+-        диапазон проверяемых значений v;
 
-·        текущее проверяемое число n;
+-        текущее проверяемое число n;
 
-·        индекс (номер) текущего проверяемого элемент массива j;
+-        индекс (номер) текущего проверяемого элемент массива j;
 
-·        количество накопленных простых чисел в A[] – k;
+-        количество накопленных простых чисел в A[] – k;
 
  «Выстраивание алгоритма». То, что в самом прямом смысле понимается под программированием, это выстраивание последовательности действий из уже имеющихся составных частей. Последовательность перечисления шагов алгоритма возникает в процессе их «рисования»:
 
@@ -87,15 +87,15 @@ metaDescription: '3.2 «Историческое» проектирование'
 
 Реализация на языке программирования. Для перевода блок-схемы в программный код прежде всего следует учитывать структурированный характер конструкций языков программирования (дань структурному программированию): они являются  вложенными друг в друга и операторы перехода включаются туда в порядке исключения. На блок-схеме явно видны два цикла:
 
-·        внешний цикл перебирает последовательные значения, проверяя их на простоту;
+-        внешний цикл перебирает последовательные значения, проверяя их на простоту;
 
-·        внутренний цикл проверяет делимость очередного значения на уже записанные в массив простые числа.
+-        внутренний цикл проверяет делимость очередного значения на уже записанные в массив простые числа.
 
 Если по поводу внешнего цикла проблем не возникает, то внутренний цикл не так то просто перевести в конструкции языка. Он имеет два выхода:
 
-·        по обнаружении делимости (число – не простое) внутренний цикл должен завершиться «без последствий» - продолжением внешнего цикла;
+-        по обнаружении делимости (число – не простое) внутренний цикл должен завершиться «без последствий» - продолжением внешнего цикла;
 
-·        по завершении просмотра массива без обнаружения делимости – необходимо добавить вновь обнаруженное простое число в массив.
+-        по завершении просмотра массива без обнаружения делимости – необходимо добавить вновь обнаруженное простое число в массив.
 
 Поскольку цикл имеет только одно условие продолжения (или завершения), то второе должно быть реализовано через оператор альтернативного выхода break.
 
@@ -162,9 +162,9 @@ for (j=0;j<k;j++) printf("%d ",A[j]);
 
 Есть несколько признаков, по которым можно отличить «исторического» программиста:
 
-·        никогда сразу не закрывает синтаксическую конструкцию (оператор), пока не напишет содержимое вложенных в нее конструкций до конца. "Структурный" программист сначала пишет конструкцию, например, пару скобок «{ }», а потом начинает обдумывать и записывать ее содержимое;
+-        никогда сразу не закрывает синтаксическую конструкцию (оператор), пока не напишет содержимое вложенных в нее конструкций до конца. "Структурный" программист сначала пишет конструкцию, например, пару скобок «{ }», а потом начинает обдумывать и записывать ее содержимое;
 
-·        начинает обсуждение цикла с первого шага. «Структурный» программист сначала определяет условия протекания циклического процесса, а замет работает с произвольным его шагом.
+-        начинает обсуждение цикла с первого шага. «Структурный» программист сначала определяет условия протекания циклического процесса, а замет работает с произвольным его шагом.
 
 Самый простой тест. Приводимый ниже пример использовался сначала для определения «нулевого» уровня знаний в разделе «Работа со строками». Оказалось, что его можно с равным успехом использовать для проверки, насколько «исторический» принцип превалирует над логическим. Итак, задана строка в массиве символов. Требуется дописать в конец символ «*». Некоторый процент начинающих рассуждает примерно так: необходимо найти конец строки, для чего надо написать цикл движения по строке. Далее: если встречается символ конца строки  (символ с кодом 0), то необходимо заменит его на символ "*", а вслед за ним записать код конца строки. В результате получается примерно следующее.
 
