--- a/content/book/3/3.4.md
+++ b/content/book/3/3.4.md
@@ -43,25 +43,25 @@ metaDescription: '3.4. Модульное программирование'
 
 Модульность формальная и истинная. Формально соблюдаемая модульность – синтаксическая: программа состоит из множества вызывающих друг друга функций (модулей), размер модуля ограничен определенным числом строк текста программы. Но не любая программа, разбитая на функции, будет модульной. Соблюдение духа, но не буквы модульного программирования, требует соблюдения следующих принципов:
 
-·        логическая завершенность. Функция (модуль) должна реализовывать логически законченный, целостный алгоритм;
+-        логическая завершенность. Функция (модуль) должна реализовывать логически законченный, целостный алгоритм;
 
-·        ограниченность. Функция (модуль) должна быть ограничена в размерах, в противном случае ее необходимо разбить на логически завершенные части - модули, вызывающие друг друга;
+-        ограниченность. Функция (модуль) должна быть ограничена в размерах, в противном случае ее необходимо разбить на логически завершенные части - модули, вызывающие друг друга;
 
-·        замкнутость. Функция (модуль) не должна использовать глобальные данные, иметь «связь с внешним миром» помимо программного интерфейса, не должна содержать ввода и вывода результатов во внешние потоки - результаты должны быть размещены в структурах данных;
+-        замкнутость. Функция (модуль) не должна использовать глобальные данные, иметь «связь с внешним миром» помимо программного интерфейса, не должна содержать ввода и вывода результатов во внешние потоки - результаты должны быть размещены в структурах данных;
 
-·        универсальность. Функция (модуль) должна быть универсальна, параметры процесса обработки и сами данные должны передаваться извне, а не должны подразумеваться или устанавливаться постоянными;
+-        универсальность. Функция (модуль) должна быть универсальна, параметры процесса обработки и сами данные должны передаваться извне, а не должны подразумеваться или устанавливаться постоянными;
 
-·        принцип «черного ящика». Функция (модуль) должна иметь продуманный «программный интерфейс» - набор фактических параметров и результат функции, через который она «подключается» к другим частям программы (вызывается).
+-        принцип «черного ящика». Функция (модуль) должна иметь продуманный «программный интерфейс» - набор фактических параметров и результат функции, через который она «подключается» к другим частям программы (вызывается).
 
 Естественное появление модулей при разработке программы. В процессе проектирования модули возникают естественным образом в процессе разбиения решаемой задачи на подзадачи, либо при выделении фрагментов некоторой задачи в отдельную подзадачу. Кроме того, функции (модули) могут иметь и «технологическое» происхождение. Если некоторая задача в процессе проектирования порождает значительное число программных контекстов и имеет значительный уровень вложенности управляющих конструкций, то в ней можно выделить подзадачу, оформив ее в виде функции с однократным вызовом.
 
 Второй случай появления модулей связан с эффектом «де жа вю»: если в процессе разработки алгоритма возникает непреодолимое желание повторить уже выполненную последовательность действий, возможны следующие варианты:
 
-·        выполнить goto к имеющемуся фрагменту (категорически не рекомендуется);
+-        выполнить goto к имеющемуся фрагменту (категорически не рекомендуется);
 
-·        повторить текст фрагмента в новом месте (не эффективно);
+-        повторить текст фрагмента в новом месте (не эффективно);
 
-·        оформить повторяющийся фрагмент в виде модуля с вызовом в двух точках программы (лучше всего).
+-        оформить повторяющийся фрагмент в виде модуля с вызовом в двух точках программы (лучше всего).
 
  Примеры модульного проектирования
 Супер-простое число. Число 1997 обладает замечательным свойством: само оно простое, простыми также являются любые разбиения его цифр на 2 части, то есть 1-997, 19-97, 199-7. Требуется найти все такие числа для заданного количества значащих цифр.
@@ -164,11 +164,11 @@ printf("super=%ld\n",a);
 
 Мы рассмотрим более компактный вариант, использующий естественное представление и преобразование данных. Если найти в строке слово с минимальной характеристикой (минимальной длины или первое по алфавиту), то после переписывания в выходную строку его можно удалить, заменив пробелами. Последовательное применение этого действия к исходной строке даст нам сортировку выбором.  Программу в такой постановке можно разбить на три модуля:
 
-·        поиск слова с минимальной характеристикой;
+-        поиск слова с минимальной характеристикой;
 
-·        основная функция – выбор и переписывание слов;
+-        основная функция – выбор и переписывание слов;
 
-·        функция сравнения двух слов в одной строке по алфавиту.
+-        функция сравнения двух слов в одной строке по алфавиту.
 
 Для начала
 
