--- a/content/book/3/3.5.md
+++ b/content/book/3/3.5.md
@@ -15,9 +15,9 @@ metaDescription: '3.5. Неправильное программирование
  «Грязное» программирование
 Под «грязным» программированием обычно понимается написание программы, грубо воспроизводящей требуемое поведение. Такая программа может быть быстро разработана и отлажена, а затем использована для уяснения последующих шагов, либо для наложения «заплаток» с целью получения требуемого результата. Хотя этот «не есть хорошо» с точки зрения технологии проектирования, но может быть оправдано при следующих условиях:
 
-·        «грязная» программа воспроизводит требуемое поведение на самом верхнем уровне.
+-        «грязная» программа воспроизводит требуемое поведение на самом верхнем уровне.
 
-·        в дальнейшем в нее могут встраиваться контексты и фрагменты, не меняющие ее поведения, но конкретизирующие ее в нужном направлении.
+-        в дальнейшем в нее могут встраиваться контексты и фрагменты, не меняющие ее поведения, но конкретизирующие ее в нужном направлении.
 
 Основным отличием правильно разрабатываемой «грязной» программы от программы, разрабатываемой «как попало»  является соблюдение соотношений, которые она устанавливает в процессе ее работы. Эти соотношения необходимо сохранять при включении в программу новых фрагментов, они являются ее инвариантами (см. 3.7, 7.1).
 
