--- a/content/book/3/3.6.md
+++ b/content/book/3/3.6.md
@@ -304,9 +304,9 @@ void F(int A[], int n, int m){
 Ошибка вида «крайняя ситуация»
 Обнаруженная ошибка является типичной ошибкой, которая возникает из-за неучтенной крайней ситуации. Дело в том, что образная модель просматривается нами на конкретном примере, не учитывающем многообразие вариантов выходных данных, т.е. для некоторого усредненного случая. Поэтому, общей рекомендацией является перечисление всех «крайних ситуаций», которые могут возникнуть в программе от различных сочетаний входных данных. Это можно сделать уже по написанному коду. Для каждой из них возможны два варианта:
 
-·        написанный код адекватно реагирует на сочетание данных, соответствующих «крайней ситуации», в программе ничего менять не надо;
+-        написанный код адекватно реагирует на сочетание данных, соответствующих «крайней ситуации», в программе ничего менять не надо;
 
-·        программа работает неправильно. В этом случае достаточно бывает наложить «заплатку», вылавливающую «крайнюю ситуацию» и содержащую правильной программный код.
+-        программа работает неправильно. В этом случае достаточно бывает наложить «заплатку», вылавливающую «крайнюю ситуацию» и содержащую правильной программный код.
 
 В нашем примере в образной модели мы пропустили ситуацию, когда количество вычеркиваемых цифр станет равным количеству оставшихся (именно она возникла на последнем сочетании данных). Исправить ее достаточно просто. В основной цикл нужно добавить условие выхода по n==m, а после выхода добавит цикл вычеркивания, если m!=0. Причем вычеркивать нужно от начала текущего диапазона (т.е. k).
 
@@ -347,23 +347,23 @@ void F(int A[], int n, int m){
 
 В отладке программы, как и в ее написании существует своя технология, сходная со структурным программированием:
 
-·      нельзя отлаживать все сразу. На каждом этапе проверяется отдельный фрагмент, для чего программа должна проходить только по уже протестированным частям, «внушающим доверие».
+-      нельзя отлаживать все сразу. На каждом этапе проверяется отдельный фрагмент, для чего программа должна проходить только по уже протестированным частям, «внушающим доверие».
 
-·      отладку программы нужно начинать на простых тестовых данных, обеспечивающих прохождение программы по уже отлаженным фрагментам. Входные данные для отладки лучше не вводить самому, а задавать в виде статических последовательностей в массивах или в файлах;
+-      отладку программы нужно начинать на простых тестовых данных, обеспечивающих прохождение программы по уже отлаженным фрагментам. Входные данные для отладки лучше не вводить самому, а задавать в виде статических последовательностей в массивах или в файлах;
 
-·      если поведение программы не поддается анализу и определить местонахождение ошибки невозможно, необходимо произвести «следственный эксперимент»: проследить выполнение программы на различных комбинациях входных данных, набрать статистику уже на ее основе строить догадки и выдвигать гипотезы, которые в свою очередь нужно проверять на новых данных;
+-      если поведение программы не поддается анализу и определить местонахождение ошибки невозможно, необходимо произвести «следственный эксперимент»: проследить выполнение программы на различных комбинациях входных данных, набрать статистику уже на ее основе строить догадки и выдвигать гипотезы, которые в свою очередь нужно проверять на новых данных;
 
-·      модульному программированию соответствует модульное тестирование. Отдельные модули (функции, процедуры) следует сначала вызывать из головной программы (main) и отлаживать на тестовых данных, а уже затем использовать по назначению. Вместо ненаписанных модулей можно использовать «заглушки», дающие фиксированный результат;
+-      модульному программированию соответствует модульное тестирование. Отдельные модули (функции, процедуры) следует сначала вызывать из головной программы (main) и отлаживать на тестовых данных, а уже затем использовать по назначению. Вместо ненаписанных модулей можно использовать «заглушки», дающие фиксированный результат;
 
-·      нисходящему программированию соответствует нисходящее тестирование. Внутренние части программы аналогично могут быть заменены «заглушками», позволяющими частично отладить уже написанные внешние части программы.
+-      нисходящему программированию соответствует нисходящее тестирование. Внутренние части программы аналогично могут быть заменены «заглушками», позволяющими частично отладить уже написанные внешние части программы.
 
 Ошибки лучше всего различать не по сложности их обнаружения и не по вызываемым ими последствиям, а по затратам на их исправление:
 
-·        мелкие ошибки типа «опечаток»,  которые обусловлены просто недостаточным вниманием программиста. К таковым относятся неправильные ограничения цикла (плюс-минус один шаг), использование не тех индексов или указателей, использование одной переменной одновременно в двух «смыслах» и т.п.;
+-        мелкие ошибки типа «опечаток»,  которые обусловлены просто недостаточным вниманием программиста. К таковым относятся неправильные ограничения цикла (плюс-минус один шаг), использование не тех индексов или указателей, использование одной переменной одновременно в двух «смыслах» и т.п.;
 
-·        локальные ошибки логики программы, состоящие в пропуске одного из возможных вариантов ее работы или сочетания входных данных, ошибка вида «крайняя ситуация»;
+-        локальные ошибки логики программы, состоящие в пропуске одного из возможных вариантов ее работы или сочетания входных данных, ошибка вида «крайняя ситуация»;
 
-·        грубые просчеты, связанные с неправильным образным представлением того, что и как должна делать программа. Это «идейные» ошибки, когда предложенная идея либо просто не работает, либо дает правильный результат не во всех случаях.
+-        грубые просчеты, связанные с неправильным образным представлением того, что и как должна делать программа. Это «идейные» ошибки, когда предложенная идея либо просто не работает, либо дает правильный результат не во всех случаях.
 
 «Любая программа в любой момент содержит как минимум одну ошибку». Программистский фольклор.
 
