--- a/content/book/4/4.1.md
+++ b/content/book/4/4.1.md
@@ -12,11 +12,11 @@ metaDescription: '4.1. Трудоемкость программ'
 
 Самое важное, что трудоемкость напрямую не связана со временем выполнения программы, но является мерой затрат на ее выполнение. Отметим наиболее важные свойства трудоемкости:
 
-·        трудоемкость определяется отдельно для каждого вида операций;
+-        трудоемкость определяется отдельно для каждого вида операций;
 
-·        трудоемкость может зависеть от входных данных. Поэтому оценка трудоемкости дается для лучшего и худшего случая, а также в среднем Tmin, Tmax, Tср . Свойство программы – иметь различную трудоемкость для разных данных, называется чувствительностью к данным;
+-        трудоемкость может зависеть от входных данных. Поэтому оценка трудоемкости дается для лучшего и худшего случая, а также в среднем Tmin, Tmax, Tср . Свойство программы – иметь различную трудоемкость для разных данных, называется чувствительностью к данным;
 
-·        на практике обычно используется грубая оценка трудоемкости, основанная на понятии скорости (степени) роста функции.
+-        на практике обычно используется грубая оценка трудоемкости, основанная на понятии скорости (степени) роста функции.
 
 Для грубой оценки трудоемкости есть свои основания. Дело в том, что размерности исходных данных (N) меняются в программах в широких пределах: на несколько порядков при отладке программы и ее работе в реальных условиях. Поэтому для функции трудоемкости важно ее асимптотическое поведение при достаточно больших N. Говорится, что функция T(N) имеет степень роста G(N), если $ C,N0 : "N>N0 C*G(N) > T(N), то есть начиная с некоторого N0 функция G(N) всегда превышает T(N) с некотором коэффициентом пропорциональности.
 
