--- a/content/book/4/4.3.md
+++ b/content/book/4/4.3.md
@@ -7,13 +7,13 @@ metaDescription: '4.3. Итерационные циклы и приближен
 Итерационный цикл
 Итак, любой цикл как процесс можно охарактеризовать четырьмя составляющими:
 
-·         начальное состояние;
+-         начальное состояние;
 
-·        ограничение цикла (условие продолжения или завершения):
+-        ограничение цикла (условие продолжения или завершения):
 
-·        переход к следующему шагу:
+-        переход к следующему шагу:
 
-·        повторяющееся действие – тело цикла.
+-        повторяющееся действие – тело цикла.
 
 В большинстве циклов действия, производимые в теле цикла, не влияют на параметры его протекания: количество шагов, характеристики шага. В таких «хороших» циклах параметры заголовка цикла не зависят от значений переменных, вычисляемых в теле цикла, и цикл имеет постоянное количество повторений, например:
 
@@ -135,9 +135,9 @@ void main(){
 
 Сама идея, на каких принципах организовать движение от точки к точке, к программированию, как таковому, не относится. Она лежит в предметной области, откуда и ведутся все доказательства работоспособности метода. Для практического программирования важно следующее:
 
-·        число шагов цикла (скорость сходимости) определяется самим методом (функцией, вычисляющей следующую точку), а также начальной точкой;
+-        число шагов цикла (скорость сходимости) определяется самим методом (функцией, вычисляющей следующую точку), а также начальной точкой;
 
-·        возможны случаи, когда процесс, наоборот, расходится, т.е. «уходит» от исходной точки, увеличивая значения координат до бесконечности (в программе – переполнение).
+-        возможны случаи, когда процесс, наоборот, расходится, т.е. «уходит» от исходной точки, увеличивая значения координат до бесконечности (в программе – переполнение).
 
 Рассмотрим простейший способ нахождения корня функции методом последовательных приближений  Для того, чтобы найти корень функции f(x)=0, решается эквивалентное уравнение x = f(x) + x. Если в него подставить точное значение корня, то правая и левая части совпадут. Если же поставить в правую часть любое «постороннее» значение x1, то в левой части получим значение, отличающееся от x1, например x: x=f(x1)+x1.
 
@@ -343,11 +343,11 @@ k(x)
 Лабораторный практикум
 Для  заданного  варианта  написать функцию  вычисления суммы ряда:
 
-·        стандартный диапазон значений x =0.1...0.9, шаг  0.1. Убедиться, что на этом диапазоне элемент суммы ряда стремится к 0, при необходимости скорректировать диапазон;
+-        стандартный диапазон значений x =0.1...0.9, шаг  0.1. Убедиться, что на этом диапазоне элемент суммы ряда стремится к 0, при необходимости скорректировать диапазон;
 
-·        вычислить значения суммы ряда  и  контрольной функции, к которой он сходится, с  точностью  до  4 знаков после запятой;
+-        вычислить значения суммы ряда  и  контрольной функции, к которой он сходится, с  точностью  до  4 знаков после запятой;
 
-·        исходя из полученного значения n и формулы ряда объяснить различную скорость сходимости для разных x;
+-        исходя из полученного значения n и формулы ряда объяснить различную скорость сходимости для разных x;
 
 Для   вариантов  13-17  реализовать рекуррентное вычисление значений sin и cos для кратных значений аргумента nx. При оценке сходимости ряда учесть, что он не является монотонно убывающим ввиду периодического характера функций sin и cos. Для оценки граничного значения слагаемого ряда заменить в формуле sin и cos на 1.
 
