--- a/content/book/4/4.5.md
+++ b/content/book/4/4.5.md
@@ -43,11 +43,11 @@ FILE *tmpfile(void)
 
 Работа с текстовыми файлами имеет существенные ограничения. Файл можно открыть для использования только одного вида из перечисленных операций:
 
-·        чтение текста из существующего файла;
+-        чтение текста из существующего файла;
 
-·        запись текста во вновь создаваемый файл;
+-        запись текста во вновь создаваемый файл;
 
-·        добавление текста в существующий файл.
+-        добавление текста в существующий файл.
 
 Для указания режима используется параметр - текстовая строка, которая имеет вид «r», «w» или «a» соответственно. Поэтому при изменении содержимого текстового файла его можно либо полностью переписать из входного в выходной, либо читать в память полностью и редактировать его там.
 
@@ -195,9 +195,9 @@ char *puts(char *str)
 
 При построчном вводе-выводе нужно учитывать, что строка в файле (потоке) и в памяти – не совсем одно и то же, в первом случае она является последовательностью символов произвольной длины, ограниченной символом '\n', а во втором случае она размещена в массиве заданной размерности и ограничена символом '\0'. Отсюда нюансы:
 
-·        при вводе-выводе все строки функции используют  в качестве стандартного ограничителя строки в  памяти  символ  '\0'.  Символ  конца  строки  '\n'  уничтожается   при стандартном вводе-выводе (gets - не  записывает  в  строку, а puts автоматически добавляет при  выводе)  и  сохраняется в строке при вводе-выводе из явно указанного  файла  (fgets - записывает в строку, fputs - выводит имеющийся  в  строке (сам  не  добавляет));
+-        при вводе-выводе все строки функции используют  в качестве стандартного ограничителя строки в  памяти  символ  '\0'.  Символ  конца  строки  '\n'  уничтожается   при стандартном вводе-выводе (gets - не  записывает  в  строку, а puts автоматически добавляет при  выводе)  и  сохраняется в строке при вводе-выводе из явно указанного  файла  (fgets - записывает в строку, fputs - выводит имеющийся  в  строке (сам  не  добавляет));
 
-·         при построчном вводе необходимо обеспечить соответствие между длиной строки в файле (которая, в принципе, может быть любой) и размерностью массива символом. Контроль за этим осуществляется так: функция задает размерность массива символов. Если строка короче, то она будет иметь в массиве  два ограничителя – символы ‘\n’ и ‘\0’ (конец строки в потоке и в памяти), если же нет, то только символ ‘\0’. Если этот факт игнорировать, то длинные строки при чтении из файла будут «порезаны» на части.
+-         при построчном вводе необходимо обеспечить соответствие между длиной строки в файле (которая, в принципе, может быть любой) и размерностью массива символом. Контроль за этим осуществляется так: функция задает размерность массива символов. Если строка короче, то она будет иметь в массиве  два ограничителя – символы ‘\n’ и ‘\0’ (конец строки в потоке и в памяти), если же нет, то только символ ‘\0’. Если этот факт игнорировать, то длинные строки при чтении из файла будут «порезаны» на части.
 
 Форматированный ввод-вывод
 Форматированный ввод-вывод позволяет программе обмениваться данными не только символьного типа (символы, фрагменты строки), но и числовыми данными базовых типов (целые, вещественные). При этом, естественно, происходит преобразование данных из внешней формы во внутреннюю – при вводе (и наоборот – при выводе) (см. 4.4). Кроме того, можно управлять размещением данных в выходном потоке (выравнивание, число позиций и т.п.).
@@ -388,36 +388,36 @@ char* или char[] – массив символов (строка)
 
 Форматный ввод-вывод имеет ряд нюансов, понять которые можно, исходя из основного его назначения: сохранение данных различного вида в текстовых файлах, где формат определяет их размещение и, отчасти, внешний вид. Интерактивный ввод-вывод в режиме командной строки является для массового пользователя анахронизмом и используется «для внутреннего употребления» в системном программировании:
 
-·        в форматном вводе-выводе источником данных может быть, кроме файла, строка символов (функции sscanf,sprintf), они имеют дополнительный параметр – массив символов – источник данных;
+-        в форматном вводе-выводе источником данных может быть, кроме файла, строка символов (функции sscanf,sprintf), они имеют дополнительный параметр – массив символов – источник данных;
 
-·        при форматном вводе функция читает ровно столько символов, сколько определяется спецификаторами ввода, а разделители возвращает во входной поток. Поэтому следует аккуратно «мешать» форматированный ввод с посимвольным и построчным. Например, если в строке содержится два целых числа, которые читаются функцией fscanf, то следующая функция fgets прочитает пустую строку, т.к. символ конца строки, ограничивающий второе число, будет возвращен во входной поток;
+-        при форматном вводе функция читает ровно столько символов, сколько определяется спецификаторами ввода, а разделители возвращает во входной поток. Поэтому следует аккуратно «мешать» форматированный ввод с посимвольным и построчным. Например, если в строке содержится два целых числа, которые читаются функцией fscanf, то следующая функция fgets прочитает пустую строку, т.к. символ конца строки, ограничивающий второе число, будет возвращен во входной поток;
 
-·        тип s используется для ввода-вывода массивов символов (строк), но при этом ввод осуществляется либо по заданному в формате количеству символов, либо до первого разделителя (в качестве которых используются пробел, конец строки, табуляция (‘\t’),  запятая, точка с запятой);
+-        тип s используется для ввода-вывода массивов символов (строк), но при этом ввод осуществляется либо по заданному в формате количеству символов, либо до первого разделителя (в качестве которых используются пробел, конец строки, табуляция (‘\t’),  запятая, точка с запятой);
 
-·        функции форматного ввода требуют передачи указателей на переменные в списке (см.5.2), поэтому имена переменных должны предваряться операцией &;
+-        функции форматного ввода требуют передачи указателей на переменные в списке (см.5.2), поэтому имена переменных должны предваряться операцией &;
 
-·        типы переменных в списке и обозначенные типы в форматной строке должны совпадать, иначе происходят ошибки во время выполнения программы, не обнаруживаемые транслятором.
+-        типы переменных в списке и обозначенные типы в форматной строке должны совпадать, иначе происходят ошибки во время выполнения программы, не обнаруживаемые транслятором.
 
 Последовательность, заданная форматом
 Посимвольная и построчная структура текста – это первый уровень организации последовательного файла. Следующий этап состоит в разбиении его на структурные единицы с более сложным порядком следования, называемом форматом. Формат  - это описание варьируемой последовательности элементов, в которой значение текущего элемента может определять порядок следования идущих за ним. Таким образом, формат всегда является саморазворачивающимся. Способы организации порядка следования элементов в формате аналогичны способам организации порядка выполнения действий в управляющих структурах программ:
 
-·        последовательное размещение разных форматных единиц друг за другом;
+-        последовательное размещение разных форматных единиц друг за другом;
 
-·        повторение нескольких форматных единиц в цикле с использованием счетчика повторений или элемента-ограничителя;
+-        повторение нескольких форматных единиц в цикле с использованием счетчика повторений или элемента-ограничителя;
 
-·        выбор одной из нескольких форматных единиц в зависимости от значения элемента-селектора;
+-        выбор одной из нескольких форматных единиц в зависимости от значения элемента-селектора;
 
-·        вложенность: последовательность форматных единиц является составной частью формата верхнего уровня.
+-        вложенность: последовательность форматных единиц является составной частью формата верхнего уровня.
 
 Элементы в форматной последовательности несут различную функциональную нагрузку:
 
-·        данные;
+-        данные;
 
-·        ограничители;
+-        ограничители;
 
-·        счетчики повторений;
+-        счетчики повторений;
 
-·        селекторы (идентификаторы типа), определяющие вид последующего формата или значения.
+-        селекторы (идентификаторы типа), определяющие вид последующего формата или значения.
 
 Определение последовательностей            посредством формата применяется, если данные имеют варьируемую структуру или переменные размерности, а также для более эффективного (сжатого) представления данных. Рассмотрим несколько примеров простых форматов:
 
