--- a/content/book/4/4.6.md
+++ b/content/book/4/4.6.md
@@ -43,15 +43,15 @@ metaDescription: '4.6. Сортировка и поиск'
 Классификация сортировок
 Любая классификация, как известно, неполна и ущербна. Признаками классификации могут быть структуры данных, используемые при сортировке (массивы, списки, деревья), местонахождение данных – в памяти (внутренняя) и в файлах (внешняя). Но все же самым лучшим принципом классификации является классификация идей, на которых строятся сортировки.
 
-·        сортировки, основанные на наличии упорядоченной и неупорядоченной последовательностей, за один шаг переносят по одному элементу из неупорядоченной части в упорядоченную (перенос). Эта общая идея в зависимости от того, при работе с какой частью массива она проявляет свой «интеллект», дает нам сортировки выбором и вставками. Сюда же относятся вставка погружением и сортировка Шелла, основанная на переменном шаге погружения;
+-        сортировки, основанные на наличии упорядоченной и неупорядоченной последовательностей, за один шаг переносят по одному элементу из неупорядоченной части в упорядоченную (перенос). Эта общая идея в зависимости от того, при работе с какой частью массива она проявляет свой «интеллект», дает нам сортировки выбором и вставками. Сюда же относятся вставка погружением и сортировка Шелла, основанная на переменном шаге погружения;
 
-·        идея обменной сортировки очевидна: если достаточно долго менять местами пары соседних элементов, не находящихся в порядке возрастания, то рано или поздно последовательность упорядочится. Различные оптимизации (шейкер-сортировка, сортировка Шелла) учитывают различные эффекты, возникающие в этом процессе;
+-        идея обменной сортировки очевидна: если достаточно долго менять местами пары соседних элементов, не находящихся в порядке возрастания, то рано или поздно последовательность упорядочится. Различные оптимизации (шейкер-сортировка, сортировка Шелла) учитывают различные эффекты, возникающие в этом процессе;
 
-·        распределение предполагает, что элементы исходной последовательности «разбрасываются» (распределяются) - в несколько последовательностей или на различные позиции в одной. Куда помещать очередной элемент, зависит не от его значения, а от его косвенных характеристик. Строго говоря, они и определяют индекс (номер) выходной последовательности или индекс (место) в выходном массиве;
+-        распределение предполагает, что элементы исходной последовательности «разбрасываются» (распределяются) - в несколько последовательностей или на различные позиции в одной. Куда помещать очередной элемент, зависит не от его значения, а от его косвенных характеристик. Строго говоря, они и определяют индекс (номер) выходной последовательности или индекс (место) в выходном массиве;
 
-·        сортировки на основе  разделения/слияния основаны на перенесении данных из одной группы в несколько (в простейшем случае – в две) (разделение) и в обратном их соединении (слияние). В отличие от распределения оба процесса линейны, то есть перенос элементов происходит линейно (последовательно). Однако «интеллект» сортировки, т.е. выбор последовательности, в которую или из которой следует помещать элементы, сосредоточен в одном из этих процессов. Тогда другой носит чисто формальный характер разъединения или соединения частей. Поэтому известны сортировки разделением («быстрая», рекурсивное и поразрядное разделение), основанные на разделении массива относительно среднего значения – медианы (см. 2.4) и сортировки слиянием упорядоченных последовательностей (см. там же) – однократное, циклическое, рекурсивное слияние. Более подробно рекурсивных сортировках см. 7.2 и 10.1.
+-        сортировки на основе  разделения/слияния основаны на перенесении данных из одной группы в несколько (в простейшем случае – в две) (разделение) и в обратном их соединении (слияние). В отличие от распределения оба процесса линейны, то есть перенос элементов происходит линейно (последовательно). Однако «интеллект» сортировки, т.е. выбор последовательности, в которую или из которой следует помещать элементы, сосредоточен в одном из этих процессов. Тогда другой носит чисто формальный характер разъединения или соединения частей. Поэтому известны сортировки разделением («быстрая», рекурсивное и поразрядное разделение), основанные на разделении массива относительно среднего значения – медианы (см. 2.4) и сортировки слиянием упорядоченных последовательностей (см. там же) – однократное, циклическое, рекурсивное слияние. Более подробно рекурсивных сортировках см. 7.2 и 10.1.
 
-·        и, наконец, известны сортировки, основанные на хранении данных в ветвящихся последовательностях (или деревьях). Хотя для них обычно используются специальные способы представления (см.8.1,8.4,8.5), их также можно «отобразить» в обычные массивы.
+-        и, наконец, известны сортировки, основанные на хранении данных в ветвящихся последовательностях (или деревьях). Хотя для них обычно используются специальные способы представления (см.8.1,8.4,8.5), их также можно «отобразить» в обычные массивы.
 
  
 
@@ -63,11 +63,11 @@ metaDescription: '4.6. Сортировка и поиск'
 
 Другим важным критерием, по которому разделяются сортировки, является их эффективность (трудоемкость). Здесь можно выделить несколько групп:
 
-·        заведомо неэффективные сортировки – это, как правило, простые алгоритмы, основанные на двойном (сложенном) цикле, для которых оценка трудоемкости имеет вид O(N2) – это сортировки выбором, вставками, погружением, обменом, подсчетом. Путем частичных усовершенствований трудоемкость может быть снижена, например, в обменной сортировке Шелла до O(N3/2);
+-        заведомо неэффективные сортировки – это, как правило, простые алгоритмы, основанные на двойном (сложенном) цикле, для которых оценка трудоемкости имеет вид O(N2) – это сортировки выбором, вставками, погружением, обменом, подсчетом. Путем частичных усовершенствований трудоемкость может быть снижена, например, в обменной сортировке Шелла до O(N3/2);
 
-·        эффективные сортировки, основанные на наличии процесса удвоения или деления пополам при обработке каждого элемента имеют нижнее значение трудоемкости O(Nlog2(N)). Грубое обоснование – процесс удвоения/деления пополам для каждого элемента имеет log2(N) шагов, а элементов всего N. К этой группе относятся все сортировки, основанные на использовании деревьев, слияние и разделение (кроме однократного слияния). Среди них есть как нечувствительные к данным, так и такие, у которых при определенных наборах данных трудоемкость межет возрасти до O(N2) («быстрая», поразрядное и рекурсивное разделение, сортировка на двоичном дереве);
+-        эффективные сортировки, основанные на наличии процесса удвоения или деления пополам при обработке каждого элемента имеют нижнее значение трудоемкости O(Nlog2(N)). Грубое обоснование – процесс удвоения/деления пополам для каждого элемента имеет log2(N) шагов, а элементов всего N. К этой группе относятся все сортировки, основанные на использовании деревьев, слияние и разделение (кроме однократного слияния). Среди них есть как нечувствительные к данным, так и такие, у которых при определенных наборах данных трудоемкость межет возрасти до O(N2) («быстрая», поразрядное и рекурсивное разделение, сортировка на двоичном дереве);
 
-·       
+-       
 
 
 и, наконец, сортировки, использующие дополнительную память, могут иметь качественно другие характеристики трудоемкости, вплоть до линейной T(N)=2(D+N), T(N)=k*N => O(N) (распределяющий подсчет, лексикографическая, поразрядное распределение).
